update project dependency to MorphoLibJ

--- a/.classpath
+++ b/.classpath
@@ -24,11 +24,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/ijpb_plugins-main"/>
 	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/MorphoLibJ"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
