--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -12,9 +12,9 @@ Plugins>Quantif Fasga 2, "-"
 Plugins>Quantif Fasga 2, "Color Space Converter", inra.ijpb.appli.fasga.ColorSpaceConverterPlugin
 Plugins>Quantif Fasga 2, "Remove Black Border", inra.ijpb.appli.fasga.RemoveBlackBorderPlugin
 
-Plugins>Quantif Fasga, "Quantif. Fasga", inra.ijpb.appli.fasga.QuantifFasgaPlugin
-Plugins>Quantif Fasga, "-"
-Plugins>Quantif Fasga, "Segment Stem", inra.ijpb.appli.fasga.SegmentStemPlugin
-Plugins>Quantif Fasga, "Average Color in ROI", inra.ijpb.appli.fasga.AverageColorPlugin
-Plugins>Quantif Fasga, "Distance Map To Regions", inra.ijpb.appli.fasga.DistanceMapToClassesPlugin
-Plugins>Quantif Fasga, "Average By Region", inra.ijpb.appli.fasga.AverageByRegionPlugin
+# Plugins>Quantif Fasga, "Quantif. Fasga", inra.ijpb.appli.fasga.QuantifFasgaPlugin
+# Plugins>Quantif Fasga, "-"
+# Plugins>Quantif Fasga, "Segment Stem", inra.ijpb.appli.fasga.SegmentStemPlugin
+# Plugins>Quantif Fasga, "Average Color in ROI", inra.ijpb.appli.fasga.AverageColorPlugin
+# Plugins>Quantif Fasga, "Distance Map To Regions", inra.ijpb.appli.fasga.DistanceMapToClassesPlugin
+# Plugins>Quantif Fasga, "Average By Region", inra.ijpb.appli.fasga.AverageByRegionPlugin
