add plugins for converting RGB to one of the HSB channels

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -10,6 +10,10 @@ Plugins>Quantif Fasga 2, "Fasga Region Classification", inra.ijpb.appli.fasga.Fa
 Plugins>Quantif Fasga 2, "Fasga Region Quantification", inra.ijpb.appli.fasga.Fasga2QuantifySegmentedSlicePlugin
 Plugins>Quantif Fasga 2, "-"
 Plugins>Quantif Fasga 2, "Color Space Converter", inra.ijpb.appli.fasga.ColorSpaceConverterPlugin
+Plugins>Quantif Fasga 2, "RGB -> Hue", inra.ijpb.appli.fasga.RGBConverterPlugin("hue")
+Plugins>Quantif Fasga 2, "RGB -> Saturation", inra.ijpb.appli.fasga.RGBConverterPlugin("saturation")
+Plugins>Quantif Fasga 2, "RGB -> Brightness", inra.ijpb.appli.fasga.RGBConverterPlugin("brightness")
+Plugins>Quantif Fasga 2, "-"
 Plugins>Quantif Fasga 2, "Remove Black Border", inra.ijpb.appli.fasga.RemoveBlackBorderPlugin
 
 # Plugins>Quantif Fasga, "Quantif. Fasga", inra.ijpb.appli.fasga.QuantifFasgaPlugin
