add possibility to extract Luma ("luminance") as a float.

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -13,6 +13,7 @@ Plugins>Quantif Fasga 2, "Color Space Converter", inra.ijpb.appli.fasga.ColorSpa
 Plugins>Quantif Fasga 2, "RGB -> Hue", inra.ijpb.appli.fasga.RGBConverterPlugin("hue")
 Plugins>Quantif Fasga 2, "RGB -> Saturation", inra.ijpb.appli.fasga.RGBConverterPlugin("saturation")
 Plugins>Quantif Fasga 2, "RGB -> Brightness", inra.ijpb.appli.fasga.RGBConverterPlugin("brightness")
+Plugins>Quantif Fasga 2, "RGB -> Luma", inra.ijpb.appli.fasga.RGBConverterPlugin("luma")
 Plugins>Quantif Fasga 2, "-"
 Plugins>Quantif Fasga 2, "Remove Black Border", inra.ijpb.appli.fasga.RemoveBlackBorderPlugin
 
