--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	</parent>
 
 	<groupId>sc.fiji</groupId>
-	<artifactId>quantif_fasga</artifactId>
-	<version>2.0.3</version>
+	<artifactId>Quantif_Fasga</artifactId>
+	<version>2.0.4-SNAPSHOT</version>
 
 	<name>plugins/Quantif_Fasga2.jar</name>
 	<description>Quantification of Fasga-stained plant sections</description>
