--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -5,15 +5,16 @@
 
 Plugins>Quantif Fasga 2, "Quantif. Fasga 2", inra.ijpb.appli.fasga.QuantifFasga2Plugin
 Plugins>Quantif Fasga 2, "-"
-Plugins>Quantif Fasga 2, "Fasga Color Filtering", inra.ijpb.appli.fasga.Fasga2MorphoFilteringPlugin
-Plugins>Quantif Fasga 2, "Fasga Region Classification", inra.ijpb.appli.fasga.Fasga2ClassifyRegionsPlugin
-Plugins>Quantif Fasga 2, "Fasga Region Quantification", inra.ijpb.appli.fasga.Fasga2QuantifySegmentedSlicePlugin
+Plugins>Quantif Fasga 2, "Color Filtering", inra.ijpb.appli.fasga.Fasga2MorphoFilteringPlugin
+Plugins>Quantif Fasga 2, "Stem Segmentation", inra.ijpb.appli.fasga.Fasga2SegmentStemPlugin
+Plugins>Quantif Fasga 2, "Regions Segmentation", inra.ijpb.appli.fasga.Fasga2SegmentRegionsPlugin
+Plugins>Quantif Fasga 2, "Region Quantification", inra.ijpb.appli.fasga.Fasga2QuantifySegmentedSlicePlugin
 Plugins>Quantif Fasga 2, "-"
 Plugins>Quantif Fasga 2, "Color Space Converter", inra.ijpb.appli.fasga.ColorSpaceConverterPlugin
 Plugins>Quantif Fasga 2, "RGB -> Hue", inra.ijpb.appli.fasga.RGBConverterPlugin("hue")
 Plugins>Quantif Fasga 2, "RGB -> Saturation", inra.ijpb.appli.fasga.RGBConverterPlugin("saturation")
 Plugins>Quantif Fasga 2, "RGB -> Brightness", inra.ijpb.appli.fasga.RGBConverterPlugin("brightness")
-Plugins>Quantif Fasga 2, "RGB -> Luma", inra.ijpb.appli.fasga.RGBConverterPlugin("luma")
+Plugins>Quantif Fasga 2, "RGB -> Luminance", inra.ijpb.appli.fasga.RGBConverterPlugin("luma")
 Plugins>Quantif Fasga 2, "-"
 Plugins>Quantif Fasga 2, "Remove Black Border", inra.ijpb.appli.fasga.RemoveBlackBorderPlugin
 
