--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -9,6 +9,7 @@ Plugins>Quantif Fasga 2, "Color Filtering", inra.ijpb.appli.fasga.Fasga2MorphoFi
 Plugins>Quantif Fasga 2, "Stem Segmentation", inra.ijpb.appli.fasga.Fasga2SegmentStemPlugin
 Plugins>Quantif Fasga 2, "Regions Segmentation", inra.ijpb.appli.fasga.Fasga2SegmentRegionsPlugin
 Plugins>Quantif Fasga 2, "Region Quantification", inra.ijpb.appli.fasga.Fasga2QuantifySegmentedSlicePlugin
+Plugins>Quantif Fasga 2, "Color Profiles", inra.ijpb.appli.fasga.Fasga2ColorProfilesPlugin
 Plugins>Quantif Fasga 2, "-"
 Plugins>Quantif Fasga 2, "Color Space Converter", inra.ijpb.appli.fasga.ColorSpaceConverterPlugin
 Plugins>Quantif Fasga 2, "RGB -> Hue", inra.ijpb.appli.fasga.RGBConverterPlugin("hue")
