--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,4 +1,4 @@
-# Configuration file for ImageJ plugin "Fast Morphology"
+# Configuration file for ImageJ plugin "Quantif. Fasga"
 #
 # comments starts with #
 # Each entry is menuname, "Command text", classname
