--- a/.classpath
+++ b/.classpath
@@ -29,6 +29,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/MorphoLibJ_-main"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/MorphoLibJ"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
