--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>Quantif_Fasga</artifactId>
-	<version>2.1.1</version>
+	<version>2.1.2-SNAPSHOT</version>
 
 	<name>plugins/Quantif_Fasga2.jar</name>
 	<description>Quantification of Fasga-stained plant sections</description>
